# ollama-cal

./: .gitignore  LICENSE  README.md  main.py  ollama-cal  ollama_cal_gtk.py  org.example.OllamaCal.desktop  org.example.OllamaCal.yaml  pyproject.toml
