[project]
name = "ollama-cal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "caldav>=2.0.1",
    "certifi>=2025.8.3",
    "httpx>=0.28.1",
    "pygobject>=3.52.3",
    "pygobject-stubs>=2.13.0",
    "vobject>=0.9.9",
]
